-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, jfx11, jfx12
-
Component/s: javafx
-
Environment:
Linux
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8229466 | jfx11.0.4 | Alexander Matveev | P3 | Closed | Fixed | |
| JDK-8222816 | 8u231 | Alexander Matveev | P3 | Resolved | Fixed | b01 |
| JDK-8223068 | 8u221 | Alexander Matveev | P3 | Resolved | Fixed | b03 |
- backported by
-
JDK-8222816 Provide media support for libav version 58
-
- Resolved
-
-
JDK-8223068 Provide media support for libav version 58
-
- Resolved
-
-
JDK-8229466 Provide media support for libav version 58
-
- Closed
-
- relates to
-
JDK-8250238 Media fails to load libav 58 library when using modules from maven central
-
- Resolved
-
-
JDK-8181922 Provide media support for libav version 57
-
- Resolved
-
-
JDK-8191446 [Linux] Build and deliver the libav media stubs for openjfx build
-
- Resolved
-
-
JDK-8294400 Provide media support for libavcodec version 59
-
- Resolved
-