8215894: Provide media support for libav version 58

Reviewed-by: kcr, jvos